examples/test/testpolicy8423.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8423
  namespace: namespace227
spec:
  podSelector:
    matchLabels:
      key18: value48
      key22: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value17
      podSelector:
        matchLabels:
          key13: value24
          key19: value39
          key42: value20
